--- a/assets/scripts/css/style.css
+++ b/assets/scripts/css/style.css
@@ -1,3 +1,28 @@
-.list-departements {
-    
+a{
+    color: #3498db;
+    text-decoration: none;
+}
+
+.list-departements a{
+    transition: all 0.3s ease-in-out;
+}
+
+.list-departements a:hover{
+    box-shadow: 5px 5px 15px rgba(230, 150, 150, 0.25);
+    transform: translateY(-5px);
+}
+
+.pagination{
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    overflow: auto;
+    width: 100%;
+}
+
+.pagination ul li {
+    list-style: none;
+    margin: 0 5px;
+    display: inline-block;
+    width: fit-content;
 }
