--- a/assets/scripts/css/style.css
+++ b/assets/scripts/css/style.css
@@ -26,3 +26,8 @@ a{
     display: inline-block;
     width: fit-content;
 }
+
+/* .table{
+    border: 1px solid black;
+    margin-left: 10px;
+} */
