--- a/assets/scripts/css/style.css
+++ b/assets/scripts/css/style.css
@@ -22,6 +22,15 @@ a{
 }
 
 
+footer a {
+    color: black;
+    transition: all 0.2s ease-in-out;
+}
+
+footer a:hover {
+    color: red;
+}
+
 .pagination{
     display: flex;
     justify-content: center;
